Minor changes that might fix using scripts to automate things